# solana-airdrop-rust

./: README.md
client/: .env  package-lock.json  package.json
client/src/: account.ts  airdrop.ts  setup.ts  startTokenAirdrop.ts  utils.ts
program/: Cargo.toml
program/src/: instruction.rs  processor.rs  state.rs
