[package]
name = "solana-airdrop"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18.12"
thiserror = "1.0.60"
spl-token = {version = "4.0.1", features = ["no-entrypoint"]}
arrayref = "0.3.7"
solana-frozen-abi = "=1.18.12"
zeroize = "=1.3.0"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true